Jump Start Changelog
====================

1.2.2
-----

* Updated Theme Blvd framework to 2.4.2
* Added additional HTML5 inputs to general form styling.
* Improved sidebar layouts in IE8.
* Fixed inconsistencies with internal grid system.
* Added support for thumbnail navigation with Boostrap Carousel slider (requires Theme Blvd Sliders v1.2.1+).
* Added support for Jumbotron, can be used with Theme Blvd Shortcodes 1.3+, Theme Blvd Layout Builder 1.3+.

--------------------------------------------------------------

1.2.1
-----

* Updated Theme Blvd framework to 2.4.1
* Minor fixes to themeblvd-dark.css
* Minor fixes to admin option styles
* Improved default styling for forms from third-party plugins

--------------------------------------------------------------

1.2.0
-----

*Warning: Make sure to read this article before updating: [Updating to Jump Start 1.2](http://support.themeblvd.com/updating-to-jump-start-1-2/)*

* **Updated Theme Blvd framework to 2.4.0**
* Updated to Bootstrap 3.
* Updated to FontAwesome 4.
* Admin styling adjustments for WordPress 3.8.
* Fixed bug with "order" custom field not working for Post List/Grid page templates.
* Minor improvements to Jump Start update handling.

--------------------------------------------------------------

1.1.3
-----

* Fixed image logo display in IE when no image width is set.
* Fixed Gallery Override feature of mini post grid being limited to 5 images.
* Added filter to `themeblvd_show_comments`.
* Added filter `themeblvd_get_option` for every time an option is pulled.
* Admin jQuery improvements for 1.9 - Converted all .live() to .on()
* Fixed `ThemeBlvd_Select_Menu_Walker::start_el()` PHP 5.4 strict error.
* Fixed CSS overflow quirk with Nivo slider type.
* Fixed IE8 Carrousel slider display bug.
* Fixed double website title bug in Feeds.

--------------------------------------------------------------

1.1.2
-----

* Fixed bug with saving "Custom Text" logo option.